new generic rest api and classes

--- a/src/IoTProtect/IoTProtect.iOS/IoTProtect.iOS.csproj
+++ b/src/IoTProtect/IoTProtect.iOS/IoTProtect.iOS.csproj
@@ -122,6 +122,8 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\wifi_20.png" />
+    <BundleResource Include="Resources\battery_20.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -132,8 +134,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
